// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegistrationCard > Should show RegistrationCard component 1`] = `
<div>
  <div
    class="sc-elDIKY dunBGf"
    data-testid="card-approved-status"
  >
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <h3
        data-testid="employee-name"
      >
        Luiz Filho
      </h3>
    </div>
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <p
        data-testid="employee-email"
      >
        luiz@caju.com.br
      </p>
    </div>
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span
        data-testid="employee-admission-date"
      >
        22/10/2023
      </span>
    </div>
    <div
      class="sc-dsLQwm dvHZRo"
    >
      <button
        class="sc-gJhJTp ktRafJ"
        data-testid="review-button"
      >
        Revisar novamente
      </button>
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`RegistrationCard > Should show RegistrationCard with review status 1`] = `
<div>
  <div
    class="sc-elDIKY dunBGf"
    data-testid="card-review-status"
  >
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <h3
        data-testid="employee-name"
      >
        Luiz Filho
      </h3>
    </div>
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <p
        data-testid="employee-email"
      >
        luiz@caju.com.br
      </p>
    </div>
    <div
      class="sc-fQpRED hmfIw"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <span
        data-testid="employee-admission-date"
      >
        22/10/2023
      </span>
    </div>
    <div
      class="sc-dsLQwm dvHZRo"
    >
      <button
        class="sc-gJhJTp kQOKiA"
        data-testid="reproved-button"
      >
        Reprovar
      </button>
      <button
        class="sc-gJhJTp hEpyQs"
        data-testid="approved-button"
      >
        Aprovar
      </button>
      <svg
        aria-hidden="true"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;
